minijinja/tests/snapshots/test_templates__vm@err_trailing_underscore_eol.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ 10_\n+ 42 }}"
info: {}
input_file: minijinja/tests/inputs/err_trailing_underscore_eol.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "'_' may not occur at end of number",
    name: "err_trailing_underscore_eol.txt",
    line: 1,
}

syntax error: '_' may not occur at end of number (in err_trailing_underscore_eol.txt:1)
----------------------- err_trailing_underscore_eol.txt -----------------------
   1 > {{ 10_
     i       ^ syntax error
   2 | + 42 }}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
